More cleanup in Window. Taking a break from this now and going back to more meaningful fixes.